# Cpp-Meetups

./: README.md
December_2025_cmake_c++_dependency_management/: CMakeLists.txt  README.md
December_2025_cmake_c++_dependency_management/with_shared_lib/: CMakeLists.txt  another_shared_library_header.hpp  another_shared_library_source.cpp  main_with_shared_lib.cpp  shared_library_header.hpp  shared_library_source.cpp
December_2025_cmake_c++_dependency_management/with_static_lib/: CMakeLists.txt  static_lib_header.hpp  static_lib_source.cpp  with_static_main.cpp
Nov.2025_HowC++BreathesOnBareMetal/: How C++ Breathes on Bare Metal.pptx
Nov.2025_HowC++BreathesOnBareMetal/cppdemo/: CMakeLists.txt  demo.c
September_2025_C++_for_high_performance_web_apps/: cpp for high performance web apps.md  readme.md
